@@ -61,6 +61,8 @@ Signals::init_signals (class Biff *biff)
 		return false;
 	if (signal (SIGSEGV, Signals::signal_handler) == SIG_ERR)
 		return false;
+	if (signal (SIGPIPE, Signals::signal_handler) == SIG_ERR)
+		return false;
 
 	return true;
 }
@@ -100,6 +102,11 @@ Signals::signal_handler (int signum)
 	case SIGSEGV:
 		Support::unknown_internal_error_ (NULL, 0, NULL, "SIGSEGV");
 		exit (EXIT_FAILURE);
+	case SIGPIPE:
+#ifdef DEBUG
+		g_message ("Ignored SIGPIPE signal");
+#endif
+		return;
 	default:
 		return;
 	}
